aria_core/include/kernels.h

void aria_tropical_add_f32(const float *a, const float *b, float *y, int64_t n);
void aria_tropical_matmul_f32(const float *A, const float *B, float *C,
                              int64_t M, int64_t K, int64_t N);
void aria_tropical_attention_f32(const float *x, float *y,
                                 int64_t batch, int64_t seq, int64_t dim,
                                 float temperature);
void aria_tropical_gate_f32(const float *x, float *y,
                            int64_t batch, int64_t seq, int64_t dim,
                            float temperature);
/* ══════════════════════════════════════════════════════════════════════
 * TIER 3: Math Space Ops
 * ══════════════════════════════════════════════════════════════════════ */

/* Hyperbolic */
void aria_exp_map_f32(const float *x, float *y, int64_t batch, int64_t dim, float c);
void aria_log_map_f32(const float *x, float *y, int64_t batch, int64_t dim, float c);
void aria_poincare_add_f32(const float *x, const float *v, float *y,
                             int64_t batch, int64_t dim, float c);
void aria_hyp_linear_f32(const float *x, const float *W, float *y,
                           int64_t batch, int64_t dim_in, int64_t dim_out, float c);
void aria_hyperbolic_norm_f32(const float *x, const float *gamma, const float *beta,
                                float *y, int64_t batch, int64_t dim, float c, float eps);
void aria_hyp_tangent_nonlinear_f32(const float *x, float *y, int64_t n, float c);