research/runtime/native/include/kernel_abi.h

/* --------------- registration entry --------------- */

typedef struct {
  const char* op_name;
  /* Forward */
  nk_unary_f32_fn   unary_fn;
  nk_binary_f32_fn  binary_fn;
  nk_matmul_f32_fn  matmul_fn;
  nk_linear_f32_fn  linear_fn;
  nk_softmax_f32_fn softmax_fn;
  nk_rmsnorm_f32_fn rmsnorm_fn;
  nk_concat_f32_fn  concat_fn;
  nk_split_f32_fn   split_fn;
  /* FP16 forward */
  nk_unary_f16_fn   unary_f16_fn;
  nk_binary_f16_fn  binary_f16_fn;
  nk_matmul_f16_fn  matmul_f16_fn;
  nk_softmax_f16_fn softmax_f16_fn;
  nk_rmsnorm_f16_fn rmsnorm_f16_fn;
  /* Fused kernels */
  nk_matmul_relu_f32_fn             matmul_relu_fn;
  nk_matmul_bias_relu_f32_fn        matmul_bias_relu_fn;
  nk_layernorm_residual_f32_fn      layernorm_residual_fn;
  nk_matmul_gelu_f32_fn             matmul_gelu_fn;
  nk_swiglu_f32_fn                  swiglu_fn;
  nk_rwkv_channel_f32_fn            rwkv_channel_fn;
  /* Backward */
  nk_unary_backward_f32_fn          unary_backward_fn;
  nk_binary_backward_simple_f32_fn  binary_backward_simple_fn;
  nk_binary_backward_f32_fn         binary_backward_fn;
  nk_matmul_backward_f32_fn         matmul_backward_fn;
} nk_registration_t;
int32_t nk_is_registered(const char* op_name);
/* Return the registration entry for `op_name`, or NULL if not found. */
const nk_registration_t* nk_dispatch(const char* op_name);